@@ -1,3 +1,7 @@
+2021-08-20  Di Chen  <dichen@redhat.com>
+
+	* run-debuginfod-find.sh: Add test for X-Forwarded-For hops limit.
+
 2021-08-04  Mark Wielaard  <mark@klomp.org>
 
 	PR28190
